added (delete task) features

--- a/Desktop/test/ToDoSolution/Web/Views/Home/Index.cshtml
+++ b/Desktop/test/ToDoSolution/Web/Views/Home/Index.cshtml
@@ -23,7 +23,11 @@
                         <input type="hidden" name="id" value="@task.Id" /> 
                         <button type="submit">تلمتكا</button> 
                     </form> 
-                }        <!-- TODO:  ةمهملا فذح رز ةفاضإ--> 
+                }    
+<form method="post" asp-action="DeleteTask" style="display:inline;">
+    <input type="hidden" name="id" value="@task.Id" />
+    <button type="submit">حذف</button>
+</form>
             </li> 
         } 
     </ul> 
